# vbwd-plugin-paypal

./: README.md  __init__.py  pyproject.toml  routes.py  sdk_adapter.py
.github/workflows/: tests.yml
paypal/: routes.py  sdk_adapter.py
tests/: conftest.py  test_plugin.py  test_recurring.py  test_routes.py  test_sdk_adapter.py  test_webhook.py
tests/unit/: test_payout.py
